--- a/android/index.html
+++ b/android/index.html
@@ -44,7 +44,7 @@ title: Android
 	<br><br>
 	
 	
-	<div id="Vision_Tools">	
+	<div id="Vision_Tool">	
 		
 		<h2>Vision Tool</h2>
 		<p>This application is a suite of tools designed to aid people with impaired vision</p>
