--- a/android/index.html
+++ b/android/index.html
@@ -7,44 +7,48 @@ title: Android
 	<h1>Android</h1>
 	<br>
 	
-	<a href="#Vision_Tools">Vision Tools</a>
+	<a href="#Nearby_Sites"> Nearby Sites </a>
+	<a href="#Vision_Tools"> Vision Tools </a>
 	
 	
-	<h2>Nearby Sites</h2>
-	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
-	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
-	
-	<table id="Nearby_Sites_Table">	
-		<tr>
-			
-			<td>
-				<figure class="Nearby_Sites_Fig">
-					<img src="/assets/img/nearby_sites/menu2.png" width="100%">
-					<figcaption> Use the slider to adjust the search radius </figcaption>
-				</figure>	
-			</td>
-			
-			<td>
-				<figure class="Nearby_Sites_Fig">
-					<img src="/assets/img/nearby_sites/menu1.png" width="100%">
-					<figcaption> Use the slider to adjust the search radius </figcaption>
-				</figure>	
-			</td>
-	
-			<td>
-				<figure class="Nearby_Sites_Fig">
-					<img src="/assets/img/nearby_sites/details.png" width="100%">
-					<figcaption> Use the slider to adjust the search radius </figcaption>
-				</figure>	
-			</td>
-			
-		</tr>	
-	</table>
-	
+	<article id="Nearby_Sites">
+		
+		<h2>Nearby Sites</h2>
+		<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
+		<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
+
+		<table id="Nearby_Sites_Table">	
+			<tr>
+
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/nearby_sites/menu2.png" width="100%">
+						<figcaption> Use the slider to adjust the search radius </figcaption>
+					</figure>	
+				</td>
+
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/nearby_sites/menu1.png" width="100%">
+						<figcaption> Use the slider to adjust the search radius </figcaption>
+					</figure>	
+				</td>
+
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/nearby_sites/details.png" width="100%">
+						<figcaption> Use the slider to adjust the search radius </figcaption>
+					</figure>	
+				</td>
+
+			</tr>	
+		</table>		
+	</article>
 	<br><br>
 	
 	
-	<div id="Vision_Tool">	
+
+	<article id="Vision_Tool">
 		
 		<h2>Vision Tool</h2>
 		<p>This application is a suite of tools designed to aid people with impaired vision</p>
@@ -72,7 +76,8 @@ title: Android
 			<div id="White_Line"> </div>
 			<figcaption> The pause menu lets the user save their results and return to a previous screen. The menu is in a drawer to keep the screen clear so the user can focus on the test. </figcaption>
 		</figure>
-	</div>
+		
+	</article>
 	
 	
 </div><!-- /.blurb -->
