--- a/android/index.html
+++ b/android/index.html
@@ -7,9 +7,10 @@ title: Android
 	<h1>Android</h1>
 	<br>
 	
-	<a href="#Nearby_Sites"> Nearby Sites </a>
-	<a href="#Vision_Tools"> Vision Tools </a>
-	
+	<ol>
+		<li> <a href="#Nearby_Sites"> Nearby Sites </a> </li>
+		<li> <a href="#Vision_Tool"> Vision Tools </a> </li>
+	</ol>
 	
 	<article id="Nearby_Sites">
 		
