--- a/android/index.html
+++ b/android/index.html
@@ -7,7 +7,7 @@ title: Android
 	<h1>Android</h1>
 	<br>
 	
-	<ol>
+	<ol class="Table_Of_Contents">
 		<li> <a href="#Nearby_Sites"> Nearby Sites </a> </li>
 		<li> <a href="#Vision_Tool"> Vision Tools </a> </li>
 	</ol>
@@ -45,8 +45,6 @@ title: Android
 			</tr>	
 		</table>		
 	</article>
-	<br><br>
-	
 	
 
 	<article id="Vision_Tool">
