--- a/android/index.html
+++ b/android/index.html
@@ -79,4 +79,37 @@ title: Android
 	</article>
 	
 	
+	<article id="Botanic_Gardens">
+		
+		<h2>Botanic Gardens</h2>
+		<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.</p>
+
+		<table id="Nearby_Sites_Table">	
+			<tr>
+
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/botanic_gardens/map_zoom1.png"">
+						<figcaption> aaaaaaa </figcaption>
+					</figure>	
+				</td>
+																			 
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/botanic_gardens/map_zoom2.png"">
+						<figcaption> aaaaaaa </figcaption>
+					</figure>	
+				</td>
+				
+				<td>
+					<figure class="Nearby_Sites_Fig">
+						<img src="/assets/img/botanic_gardens/map_zoom3.png"">
+						<figcaption> aaaaaaa </figcaption>
+					</figure>	
+				</td>
+
+			</tr>	
+		</table>		
+	</article>
+	
 </div><!-- /.blurb -->
