--- a/android/index.html
+++ b/android/index.html
@@ -10,6 +10,7 @@ title: Android
 	<ol class="Table_Of_Contents">
 		<li> <a href="#Nearby_Sites"> Nearby Sites </a> </li>
 		<li> <a href="#Vision_Tool"> Vision Tools </a> </li>
+		<li> <a href="#Botanic_Gardens"> Botanic Gardens </a> </li>
 	</ol>
 	
 	<article id="Nearby_Sites">
