--- a/android/index.html
+++ b/android/index.html
@@ -19,25 +19,25 @@ title: Android
 		<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
 		<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
 
-		<table id="Nearby_Sites_Table">	
+		<table class="Fig_Table">	
 			<tr>
 
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu2.png" width="100%">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
 				</td>
 
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu1.png" width="100%">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
 				</td>
 
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/details.png" width="100%">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
@@ -85,25 +85,25 @@ title: Android
 		<h2>Botanic Gardens</h2>
 		<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.</p>
 
-		<table id="Nearby_Sites_Table">	
+		<table class="Fig_Table">	
 			<tr>
 
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom1.png"">
 						<figcaption> aaaaaaa </figcaption>
 					</figure>	
 				</td>
 																			 
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom2.png"">
 						<figcaption> aaaaaaa </figcaption>
 					</figure>	
 				</td>
 				
 				<td>
-					<figure class="Nearby_Sites_Fig">
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom3.png"">
 						<figcaption> aaaaaaa </figcaption>
 					</figure>	
