--- a/android/index.html
+++ b/android/index.html
@@ -24,21 +24,21 @@ title: Android
 
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/nearby_sites/menu2.png" width="100%">
+						<img src="/assets/img/nearby_sites/menu2.png">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/nearby_sites/menu1.png" width="100%">
+						<img src="/assets/img/nearby_sites/menu1.png">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/nearby_sites/details.png" width="100%">
+						<img src="/assets/img/nearby_sites/details.png">
 						<figcaption> Use the slider to adjust the search radius </figcaption>
 					</figure>	
 				</td>
