--- a/android/index.html
+++ b/android/index.html
@@ -83,7 +83,10 @@ title: Android
 	<article id="Botanic_Gardens">
 		
 		<h2>Botanic Gardens</h2>
-		<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.</p>
+		<p>
+			android companion app for the Dunedin Botanic Gardens. The project is being developed by 5 Otago Polytechnic students, 2 to develop a web API, and 3 including myself to develop the android application.
+			The application utilises the map display and control functionality of Google Maps and displays the features of the gardens.
+		</p>
 
 		<table class="Fig_Table">	
 			<tr>
