--- a/android/index.html
+++ b/android/index.html
@@ -84,7 +84,7 @@ title: Android
 		
 		<h2>Botanic Gardens</h2>
 		<p>
-			android companion app for the Dunedin Botanic Gardens. The project is being developed by 5 Otago Polytechnic students, 2 to develop a web API, and 3 including myself to develop the android application.
+			This is a android companion app for the Dunedin Botanic Gardens. The project is being developed by 5 Otago Polytechnic students, 2 to develop a web API, and 3 including myself to develop the android application.
 			The application utilises the map display and control functionality of Google Maps and displays the features of the gardens.
 		</p>
 
