--- a/android/index.html
+++ b/android/index.html
@@ -53,27 +53,27 @@ title: Android
 		<h2>Vision Tool</h2>
 		<p>This application is a suite of tools designed to aid people with impaired vision</p>
 
-		<figure>
+		<figure class="Full_Width_Fig">
 			<img src="/assets/img/vision_tool/menu.PNG">
-			<div id="White_Line"> </div>
+			<div class="White_Line"> </div>
 			<figcaption> The application launches to the main menu. </figcaption>
 		</figure>
 
-		<figure>
+		<figure class="Full_Width_Fig">
 			<img src="/assets/img/vision_tool/tool_list.PNG">
-			<div id="White_Line"> </div>
+			<div class="White_Line"> </div>
 			<figcaption> All the available tools are listed. When the user selects a tool, additional details are displayed. </figcaption>
 		</figure>
 
-		<figure>
+		<figure class="Full_Width_Fig">
 			<img src="/assets/img/vision_tool/directional.PNG">
-			<div id="White_Line"> </div>
+			<div class="White_Line"> </div>
 			<figcaption> In this tool the user must determine the direction of a central image. The image is reduced in size over the duration of the test. </figcaption>
 		</figure>
 
-		<figure>
+		<figure class="Full_Width_Fig">
 			<img src="/assets/img/vision_tool/drawer.PNG">
-			<div id="White_Line"> </div>
+			<div class="White_Line"> </div>
 			<figcaption> The pause menu lets the user save their results and return to a previous screen. The menu is in a drawer to keep the screen clear so the user can focus on the test. </figcaption>
 		</figure>
 		
