--- a/android/index.html
+++ b/android/index.html
@@ -11,6 +11,7 @@ title: Android
 		<li> <a href="#Nearby_Sites"> Nearby Sites </a> </li>
 		<li> <a href="#Vision_Tool"> Vision Tools </a> </li>
 		<li> <a href="#Botanic_Gardens"> Botanic Gardens </a> </li>
+		<li> <a href=".content"> Botanic Gardens </a> </li>
 	</ol>
 	
 	<article id="Nearby_Sites">
