--- a/android/index.html
+++ b/android/index.html
@@ -92,21 +92,21 @@ title: Android
 
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom1.png"">
+						<img src="/assets/img/botanic_gardens/map_zoom1.png">
 						<figcaption> The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area. </figcaption>
 					</figure>	
 				</td>
 																			 
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom2.png"">
+						<img src="/assets/img/botanic_gardens/map_zoom2.png">
 						<figcaption> Points of interest are display on the map. </figcaption>
 					</figure>	
 				</td>
 				
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom3.png"">
+						<img src="/assets/img/botanic_gardens/map_zoom3.png">
 						<figcaption> To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level. </figcaption>
 					</figure>	
 				</td>
