--- a/android/index.html
+++ b/android/index.html
@@ -65,26 +65,27 @@ title: Android
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu2.png">
-						<figcaption> Use the slider to adjust the search radius </figcaption>
+						<figcaption> Use the slider to adjust the search radius. </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu1.png">
-						<figcaption> Use the slider to adjust the search radius </figcaption>
+						<figcaption> Nearby interest sites are listed. </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/details.png">
-						<figcaption> Use the slider to adjust the search radius </figcaption>
+						<figcaption> Select an item to view additional details. </figcaption>
 					</figure>	
 				</td>
 
 			</tr>	
-		</table>		
+		</table>	
+		
 	</article>
 	
 
