--- a/android/index.html
+++ b/android/index.html
@@ -34,14 +34,16 @@ title: Android
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom2.png">
-						<figcaption> Points of interest are display on the map. </figcaption>
+						<figcaption> Points of interest are display on the map.
+									le to use all the standard google maps camera controls. Although we have bounded the camera to this area. </figcaption>
 					</figure>	
 				</td>
 				
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom3.png">
-						<figcaption> To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level. </figcaption>
+						<figcaption> To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level. 
+						aaaaaaaaaaaa aaaaaaaaaaaaaaaaaa</figcaption>
 					</figure>	
 				</td>
 
