--- a/android/index.html
+++ b/android/index.html
@@ -22,32 +22,35 @@ title: Android
 		</p>
 
 		<table class="Fig_Table">	
+		
 			<tr>
-
 				<td>
-					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom1.png">
-						<figcaption> The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area. </figcaption>
-					</figure>	
+					<img src="/assets/img/botanic_gardens/map_zoom1.png">
 				</td>
 
 				<td>
-					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom2.png">
-						<figcaption> Points of interest are display on the map.
-									le to use all the standard google maps camera controls. Although we have bounded the camera to this area. </figcaption>
-					</figure>	
+					<img src="/assets/img/botanic_gardens/map_zoom2.png">
 				</td>
 				
 				<td>
-					<figure class="Fig_Table_Item">
-						<img src="/assets/img/botanic_gardens/map_zoom3.png">
-						<figcaption> To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level. 
-						aaaaaaaaaaaa aaaaaaaaaaaaaaaaaa</figcaption>
-					</figure>	
+					<img src="/assets/img/botanic_gardens/map_zoom3.png">
+				</td>
+			</tr>	
+			
+			<tr>
+				<td>
+					The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area.
 				</td>
 
+				<td>
+					Points of interest are display on the map.
+				</td>
+				
+				<td>
+					To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level.
+				</td>
 			</tr>	
+			
 		</table>	
 
 	</article>
