--- a/android/index.html
+++ b/android/index.html
@@ -38,7 +38,7 @@ title: Android
 			</tr>	
 			
 
-			<tr>
+			<tr class="Fig_Table_Caption_Row">
 				<td>
 					The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area.
 				</td>
