--- a/android/index.html
+++ b/android/index.html
@@ -25,20 +25,36 @@ title: Android
 		
 			<tr>
 				<td>
-					<img src="/assets/img/botanic_gardens/map_zoom1.png">
+					<figure>
+						<img src="/assets/img/botanic_gardens/map_zoom1.png">
+						<figcaption>
+							<p> 1 </p>
+						</figcaption>
+					</figure>
 				</td>
 
 				<td>
-					<img src="/assets/img/botanic_gardens/map_zoom2.png">
+					<figure>
+						<img src="/assets/img/botanic_gardens/map_zoom2.png">
+						<figcaption>
+							<p> 2 </p>
+						</figcaption>
+					</figure>
 				</td>
 				
 				<td>
-					<img src="/assets/img/botanic_gardens/map_zoom3.png">
+					<figure>
+						<img src="/assets/img/botanic_gardens/map_zoom3.png">
+						<figcaption>
+							<p> 2 </p>
+						</figcaption>
+					</figure>
 				</td>
 			</tr>	
 			
 		</table>	
 		
+		<p>
 		<ol>
 			<li>
 				The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area.
@@ -52,6 +68,7 @@ title: Android
 				To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level.
 			</li>
 		</ol>
+		</p>
 
 	</article>
 	
