--- a/android/index.html
+++ b/android/index.html
@@ -25,7 +25,7 @@ title: Android
 		
 			<tr>
 				<td>
-					<figure>
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom1.png">
 						<figcaption>
 							<p> 1 </p>
@@ -34,7 +34,7 @@ title: Android
 				</td>
 
 				<td>
-					<figure>
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom2.png">
 						<figcaption>
 							<p> 2 </p>
@@ -43,7 +43,7 @@ title: Android
 				</td>
 				
 				<td>
-					<figure>
+					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom3.png">
 						<figcaption>
 							<p> 2 </p>
@@ -54,8 +54,7 @@ title: Android
 			
 		</table>	
 		
-		<p>
-		<ol>
+		<ol class="Fig_Caption_List">
 			<li>
 				The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area.
 			</li>
@@ -68,7 +67,6 @@ title: Android
 				To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level.
 			</li>
 		</ol>
-		</p>
 
 	</article>
 	
