--- a/android/index.html
+++ b/android/index.html
@@ -27,27 +27,21 @@ title: Android
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom1.png">
-						<figcaption>
-							<p> 1 </p>
-						</figcaption>
+						<figcaption> 1 </figcaption>
 					</figure>
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom2.png">
-						<figcaption>
-							<p> 2 </p>
-						</figcaption>
+						<figcaption> 2 </figcaption>
 					</figure>
 				</td>
 				
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/botanic_gardens/map_zoom3.png">
-						<figcaption>
-							<p> 2 </p>
-						</figcaption>
+						<figcaption> 3 </figcaption>
 					</figure>
 				</td>
 			</tr>	
