--- a/android/index.html
+++ b/android/index.html
@@ -14,6 +14,10 @@ title: Android
 	</ol>
 	
 	
+	<!--	
+	  --	======== Botanic Gardens ========
+	  -->
+	
 	<article id="Botanic_Gardens">
 		
 		<h2>Botanic Gardens</h2>
@@ -65,6 +69,10 @@ title: Android
 	</article>
 	
 	
+	<!--	
+	  --	======== Nearby Sites ========
+	  -->
+	  
 	<article id="Nearby_Sites">
 		
 		<h2>Nearby Sites</h2>
@@ -79,30 +87,48 @@ title: Android
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu2.png">
-						<figcaption> Use the slider to adjust the search radius. </figcaption>
+						<figcaption> 1 </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/menu1.png">
-						<figcaption> Nearby interest sites are listed. </figcaption>
+						<figcaption> 2 </figcaption>
 					</figure>	
 				</td>
 
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/nearby_sites/details.png">
-						<figcaption> Select an item to view additional details. </figcaption>
+						<figcaption> 3 </figcaption>
 					</figure>	
 				</td>
 
 			</tr>	
 		</table>	
 		
+		<ol class="Fig_Caption_List">
+			<li>
+				Use the slider to adjust the search radius.
+			</li>
+			
+			<li>
+				Nearby interest sites are listed.
+			</li>
+			
+			<li>
+				Select an item to view additional details.
+			</li>
+		</ol>
+		
 	</article>
 	
 
+	<!--	
+	  --	======== Vision Tool ========
+	  -->
+	  
 	<article id="Vision_Tool">
 		
 		<h2>Vision Tool</h2>
