--- a/android/index.html
+++ b/android/index.html
@@ -25,6 +25,7 @@ title: Android
 			This is a companion app for the Dunedin Botanic Gardens. The project is being developed by 5 Otago Polytechnic students, 2 to develop a web API, and 3 including myself to develop the android application.
 		</p>
 
+		
 		<table class="Fig_Table">	
 		
 			<tr>
@@ -63,6 +64,48 @@ title: Android
 			
 			<li>
 				To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level.
+			</li>
+		</ol>
+		
+		<!-- -->
+		<table class="Fig_Table">	
+		
+			<tr>
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="/assets/img/botanic_gardens/select_collection.png">
+						<figcaption> 4 </figcaption>
+					</figure>
+				</td>
+
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="/assets/img/botanic_gardens/collection_view.png">
+						<figcaption> 5 </figcaption>
+					</figure>
+				</td>
+				
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="/assets/img/botanic_gardens/collection_view_itemlist.png">
+						<figcaption> 6 </figcaption>
+					</figure>
+				</td>
+			</tr>	
+			
+		</table>	
+		
+		<ol class="Fig_Caption_List" start="4">
+			<li>
+				The user can select a collection marker to launch the collection details view.
+			</li>
+			
+			<li>
+				The collection details view displays the items in the collection, as well as a brief description of the collection.
+			</li>
+			
+			<li>
+				The item in the collection are also listed in an expandable list view.
 			</li>
 		</ol>
 
