--- a/android/index.html
+++ b/android/index.html
@@ -111,6 +111,50 @@ title: Android
 
 	</article>
 	
+	<!-- -->
+		<table class="Fig_Table">	
+		
+			<tr>
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="/assets/img/botanic_gardens/collection_view_highlight.png">
+						<figcaption> 7 </figcaption>
+					</figure>
+				</td>
+
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="/assets/img/botanic_gardens/item.png">
+						<figcaption> 8 </figcaption>
+					</figure>
+				</td>
+				
+				<td>
+					<figure class="Fig_Table_Item">
+						<img src="">
+						<figcaption> </figcaption>
+					</figure>
+				</td>
+			</tr>	
+			
+		</table>	
+		
+		<ol class="Fig_Caption_List" start="7">
+			<li>
+				The user can select a collection marker to launch the collection details view.
+			</li>
+			
+			<li>
+				The collection details view displays the items in the collection, as well as a brief description of the collection.
+			</li>
+			
+			<li>
+				The item in the collection are also listed in an expandable list view.
+			</li>
+		</ol>
+
+	</article>
+	
 	
 	<!--	
 	  --	======== Nearby Sites ========
