--- a/android/index.html
+++ b/android/index.html
@@ -131,7 +131,7 @@ title: Android
 				
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="">
+						<img src="/assets/img/filler.png">
 						<figcaption> </figcaption>
 					</figure>
 				</td>
@@ -139,17 +139,9 @@ title: Android
 			
 		</table>	
 		
-		<ol class="Fig_Caption_List" start="7">
+		<ol class="Fig_Caption_List" start="8">
 			<li>
-				The user can select a collection marker to launch the collection details view.
-			</li>
-			
-			<li>
-				The collection details view displays the items in the collection, as well as a brief description of the collection.
-			</li>
-			
-			<li>
-				The item in the collection are also listed in an expandable list view.
+				Selecting an item marker launches the item detail view.
 			</li>
 		</ol>
 
