--- a/android/index.html
+++ b/android/index.html
@@ -132,7 +132,7 @@ title: Android
 				<td>
 					<figure class="Fig_Table_Item">
 						<img src="/assets/img/filler.png">
-						<figcaption> </figcaption>
+						<figcaption> 9 </figcaption>
 					</figure>
 				</td>
 			</tr>	
