move article tag

--- a/android/index.html
+++ b/android/index.html
@@ -105,13 +105,12 @@ title: Android
 			</li>
 			
 			<li>
-				The item in the collection are also listed in an expandable list view.
+				The items in the collection are also listed in an expandable list view.
 			</li>
 		</ol>
 
-	</article>
 	
-	<!-- -->
+		<!-- -->
 		<table class="Fig_Table">	
 		
 			<tr>
