--- a/android/index.html
+++ b/android/index.html
@@ -51,6 +51,24 @@ title: Android
 				</td>
 			</tr>	
 			
+			<tr>
+				<td>
+					<ol class="Fig_Caption_List">
+						<li>
+							The app is built with google maps so the user is able to use all the standard google maps camera controls. Although we have bounded the camera to this area.
+						</li>
+						
+						<li>
+							Points of interest are display on the map.
+						</li>
+						
+						<li>
+							To help with screen clutter, the labels only expand when the user has zoomed in to a sufficient level.
+						</li>
+					</ol>
+				</td>	
+			</tr>
+			
 		</table>	
 		
 		<ol class="Fig_Caption_List">
