--- a/android/index.html
+++ b/android/index.html
@@ -180,7 +180,7 @@ title: Android
 				
 				<td>
 					<figure class="Fig_Table_Item">
-						<img src="/assets/img/item.png">
+						<img src="/assets/img/botanic_gardens/item.png">
 						<figcaption> 12 </figcaption>
 					</figure>
 				</td>
