--- a/android/index.html
+++ b/android/index.html
@@ -115,6 +115,8 @@ title: Android
 		<h2>Botanic Gardens</h2>
 		<p>
 			This is a companion app for the Dunedin Botanic Gardens. The project is being developed by 5 Otago Polytechnic students, 2 to develop a web API, and 3 including myself to develop the android application.
+			<a href="https://drive.google.com/open?id=0B4oAfWQrOmHic2xKejlYOTEwRGM">apk</a> 
+			
 		</p>
 
 		
