--- a/education/index.html
+++ b/education/index.html
@@ -10,4 +10,6 @@ title: Education
 	
 	<h2> <a href="Liam_Harris_OP_Results.pdf"	> Otago Polytechnic </a> <small>From 2015</small> </h2> 
 	
+	<h2> <a href="http://www.anztb.org/certifiedtesters.php" > ISTQB Certified Tester, Foundation level</a> <small> 2016 </small> </h2> 
+	
 </div><!-- /.blurb -->
