--- a/unity/index.html
+++ b/unity/index.html
@@ -6,6 +6,8 @@ title: Unity
 	
 	<h1>Unity</h1>
 	<br>
+	
+	<video src="/assets/video/Unity_Platformer_1.avi" width="320" height="200" controls preload></video>
 
 	
 </div><!-- /.blurb -->
