--- a/unity/index.html
+++ b/unity/index.html
@@ -6,10 +6,11 @@ title: Unity
 	
 	<h1>Unity</h1>
 	<br>
-	
-	<video src="/assets/video/Unity_Platformer_1.avi" width="320" height="200" controls preload></video>
 
-	<video src="https://drive.google.com/file/d/0B4oAfWQrOmHieTJELXlTOWNDcEE/view?usp=sharing" width="320" height="200" controls preload></video>
+	<p>
+		I have been learning to develop in unity since mid 2017. Here is a video showing a small platformer demo I am currently developing.
+	</p>
+	<br>
 	
 	<iframe src="https://drive.google.com/file/d/0B4oAfWQrOmHieTJELXlTOWNDcEE/preview" width="640" height="480"></iframe>
 	
