--- a/unity/index.html
+++ b/unity/index.html
@@ -8,7 +8,7 @@ title: Unity
 	<br>
 
 	<p>
-		I have been learning to develop in unity since mid 2017. Here is a video showing a small platformer demo I am currently developing.
+		I have been learning to develop in Unity since mid 2017. Here is a video showing a small platformer demo I am currently developing.
 	</p>
 	<br>
 	
